--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <body>
 
     <section class="page-header">
-    <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+    <h1 class="project-name">Learning Safely</h1>
     </section>
 
     <section class="main-content">
